--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multi-Page Code Editor</title>
+  <title>New Tab</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,8 +15,7 @@
 
 
 <div class="page">
-  <h1>Welcome</h1>
-  <p>This is your main page.</p>
+  <h1>ryks random stuff</h1>
 </div>
 </body>
 </html>
