--- a/games.html
+++ b/games.html
@@ -72,9 +72,10 @@
     </style>
 </head>
 <body>
-<div id="navbar">
-    <a href="games.html">Games</a>
-    <a href="#">Other Stuff</a>
+<div class="topbar">
+  <a href="index.html">Home</a>
+  <a href="code.html">Code Editor</a>
+  <a href="custom.html">Custom Buttons</a>
 </div>
     
 </body>
