--- a/games.html
+++ b/games.html
@@ -77,6 +77,10 @@
   <a href="code.html">Code Editor</a>
   <a href="custom.html">Custom Buttons</a>
 </div>
-    
+    <div class="topbar">
+  <a href="index.html">Home</a>
+  <a href="code.html">Code Editor</a>
+  <a href="custom.html">Custom Buttons</a>
+</div>
 </body>
 </html>
