--- a/games.html
+++ b/games.html
@@ -73,14 +73,23 @@
 </head>
 <body>
 <div class="topbar">
-  <a href="index.html">Home</a>
-  <a href="code.html">Code Editor</a>
-  <a href="custom.html">Custom Buttons</a>
+    <a href="index.html">Home</a>
+    <a href="code.html">Code Editor</a>
+    <a href="custom.html">Custom Buttons</a>
 </div>
-    <div class="topbar">
-  <a href="index.html">Home</a>
-  <a href="code.html">Code Editor</a>
-  <a href="custom.html">Custom Buttons</a>
-</div>
+<button
+        onclick='fetch("https://cdn.jsdelivr.net/gh/gn-math/gn-math-DONTDMCA@main/autoupdate.html?t="+Date.now()).then(response => response.text()).then(text => {const newWin = window.open("about:blank", "_blank");if (newWin) {newWin.document.open();newWin.document.write(text);newWin.document.close();}});'
+        style="width: 100%; height: 100%; font-size: 100px;"
+
+>GN-math</button>
+<button
+        onclick='fetch("https://cdn.jsdelivr.net/gh/NoahsAmazingTutoringHelp/reimagined-octo-winner@main/blahblahblah.html?t="+Date.now()).then(response => response.text()).then(text => {const newWin = window.open("about:blank", "_blank");if (newWin) {newWin.document.open();newWin.document.write(text);newWin.document.close();}});'
+        style="width: 100%; height: 100%; font-size: 100px;"
+
+>Noah's math tutoring</button>
+<button
+        onclick='fetch("hhttps://cdn.jsdelivr.net/gh/bubbls/ugs-singlefile@main/AASINGLEFILE.html?t="+Date.now()).then(response => response.text()).then(text => {const newWin = window.open("about:blank", "_blank");if (newWin) {newWin.document.open();newWin.document.write(text);newWin.document.close();}});'
+        style="width: 100%; height: 100%; font-size: 100px;"
+>Ultimate Game Stash</button>
 </body>
 </html>
