--- a/custom.html
+++ b/custom.html
@@ -3,18 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Buttons</title>
-    <link rel="stylesheet" href="style.css">
+    <title></title>
+    <style>body {
+        margin:0;
+        font-family: Arial, sans-serif;
+        background:#121212;
+        color:#e0e0e0;
+    }
+    .topbar {
+        display:flex;
+        gap:15px;
+        padding:15px;
+        background:#1f1f1f;
+    }
+    .topbar a {
+        color:#e0e0e0;
+        text-decoration:none;
+        font-weight:bold;
+    }
+    .page { padding:20px; }
+    #editor { width:100%; height:300px; border:1px solid #333; background:#1e1e1e; color:#ffffff; }
+    #iframeContainer, iframe { width:100%; height:300px; border:1px solid #333; margin-top:10px; background:#1e1e1e; color:#ffffff; }
+    button {
+        background:#333;
+        color:#e0e0e0;
+        border:none;
+        padding:10px 15px;
+        cursor:pointer;
+    }
+    button:hover {
+        background:#444;
+    }</style>
 </head>
 <body>
 <div class="topbar">
     <a href="index.html">Home</a>
     <a href="code.html">Code Editor</a>
     <a href="custom.html">Custom Buttons</a>
-    <a href="todo1.html">Todo 1</a>
-    <a href="todo2.html">Todo 2</a>
+
 </div>
 
+TO BEE ADDED ON
 
 </body>
 </html>
